--- a/rust_crate/belajar_rust_crate/Cargo.toml
+++ b/rust_crate/belajar_rust_crate/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+belajar_rust_crate_say_hello = { version = "0.2.0", features = ["all"] }
 chrono = "0.4.38"
 say-hello-styawan = { version = "=0.3.0", features = ["all"] }
